# GoBang

./: AC_Automachine.c  AC_Automachine.h  CMakeLists.txt  README.md  Zoribrist_hash.c  Zoribrist_hash.h  boardEvaluate.c  boardEvaluate.h  bruteForce.c  bruteForce.h  customTypes.h  drawBoard.c  drawBoard.h  icld.h  interact.c  interact.h  main.c  mathFunc.c  mathFunc.h  mathFunction.c  mathFunction.h  statusBoard.c  statusBoard.h  statusSearch.c  statusSearch.h
